welcome_service.yaml
  kind: Service
  apiVersion: v1
  metadata:
    name: welcome-service
  spec:
    type: NodePort
    selector:
      app: master
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8082
        name: ui
