welcome_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: welcome-service
  namespace: default
#  annotations:
#    ingress.kubernetes.io/add-base-url: "true"
#    ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - secretName: tls
  backend:
    serviceName: welcome-ui
    servicePort: 8080
